feat(applying-rule) - popup created

--- a/popup.html
+++ b/popup.html
@@ -5,13 +5,10 @@
     <title>TradeLocker Popup</title>
   </head>
   <body>
+    <h2>limit price</h2>
+    <input type="number" />
     <button id="testButton">Press me</button>
-    <script>
-      document
-        .getElementById("testButton")
-        .addEventListener("click", function () {
-          console.log("working");
-        });
-    </script>
+
+    <script src="content.js"></script>
   </body>
 </html>
